[gd_scene load_steps=4 format=3 uid="uid://cnlvjh7aefr5h"]

[ext_resource type="PackedScene" uid="uid://bx7vyfkfefxny" path="res://ui/level_summary.tscn" id="1_80ckp"]
[ext_resource type="Script" path="res://ui/level_end.gd" id="1_po8jr"]
[ext_resource type="PackedScene" uid="uid://dc2r43mchebnk" path="res://ui/confirmable_button.tscn" id="2_f80ev"]

[node name="LevelEnd" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_po8jr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -105.0
offset_right = 358.0
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Level Stats"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelSummary" parent="PanelContainer/VBoxContainer" instance=ExtResource("1_80ckp")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="XPLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayNextButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play Next"

[node name="TryAgainButton" parent="PanelContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_f80ev")]
unique_name_in_owner = true
layout_mode = 2
text = "Try Again"
confirmation_text = "You won. Please confirm you want to try again."

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/PlayNextButton" to="." method="_on_play_next_button_pressed"]
[connection signal="pressed_confirmed" from="PanelContainer/VBoxContainer/HBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed_confirmed"]
